<resources>
    <string name="app_name">Rust</string>
    <string name="hint_editor">Введите текст здесь...</string>

    <string name="menu_open_file">Открыть файл</string>
    <string name="menu_open_multiple">Открыть несколько</string>
    <string name="menu_save_as">Сохранить как</string>
    <string name="menu_open_folder">Выбрать папку</string>
    <string name="menu_search_replace">Поиск / Замена</string>
    <string name="menu_compare">Сравнить файлы</string>
    <string name="menu_settings">Настройки</string>
</resources>
